--- a/README.org
+++ b/README.org
@@ -28,6 +28,13 @@ This is my NixOS configuraiton. It's quite simple for now, but it'll be improved
 *** TODO Fix colors to be defined in one file instead of every themed app
 *** TODO Set up logging in with password + U2F key
 *** TODO Set up "panic password" which deletes all of =/home/=
+*** TODO configure ZSH via nix file
+**** TODO configure prezto
+*** TODO configure neovim
+*** TODO configure git
+*** TODO configure gh
+*** TODO configure ssh
+*** TODO configure lsd
 ** WM
 *** TODO Add qtile config into this directory to make it more manageable
 ** Emacs
