Rearrange some TODOs

--- a/README.org
+++ b/README.org
@@ -28,6 +28,11 @@ This is my NixOS configuraiton. It's quite simple for now, but it'll be improved
 *** TODO Fix colors to be defined in one file instead of every themed app
 *** TODO Set up logging in with password + U2F key
 *** TODO Set up "panic password" which deletes all of =/home/=
+** WM
+*** TODO Add qtile config into this directory to make it more manageable
+*** TODO configure autorandr
+*** TODO set background with Nix
+** Shell
 *** TODO configure ZSH via nix file
 **** TODO configure prezto
 *** TODO configure neovim
