--- a/README.org
+++ b/README.org
@@ -25,7 +25,7 @@ This is my NixOS configuraiton. It's quite simple for now, but it'll be improved
 *** TODO Move all of the configs into literates (preferably into this file)
 *** IDEA Consider moving to ZFS instead of BTRFS
 *** IDEA Consider [[https://grahamc.com/blog/erase-your-darlings?source=techstories.org][removing my darlings]]
-*** TODO Fix colors to be defined in one file instead of every themed app
+*** DONE Fix colors to be defined in one file instead of every themed app
 *** TODO Set up logging in with password + U2F key
 *** TODO Set up "panic password" which deletes all of =/home/=
 ** PROJ WM
@@ -41,11 +41,11 @@ There's no use to use prezto
 *** DONE configure ssh
 *** DONE configure lsd
 ** PROJ Emacs
-*** TODO Set up Emacs overlay as flake
+*** DONE Set up Emacs overlay as flake
 *** KILL Fix Emacs' service
 ** PROJ NixOS
 *** DONE Set up automatic GC with ~2 weeks of generations
-*** TODO Set up backups properly
+*** DONE Set up backups properly
 *** TODO Set up agenix secrets
 * Requirements
 1. NixOS
