--- a/README.org
+++ b/README.org
@@ -67,9 +67,12 @@ There's no use to use prezto
 *** DONE Use FUP
 *** DONE Modularize HM's stuff
 ** PROJ self hosted
-*** TODO set up minio server for laptop backups
-*** TODO set up tube archivist
-*** TODO move nextcloud to dart
+*** Dart
+**** TODO set up minio server for laptop backups
+**** TODO set up tube archivist
+**** TODO move nextcloud
+**** TODO set up jellyfin
+**** TODO set up papermerge-ng
 * Requirements
 1. NixOS
 2. Flakes enabled
