--- a/README.org
+++ b/README.org
@@ -20,7 +20,7 @@
 
 This is my NixOS configuraiton. It's quite simple for now, but it'll be improved over time.
 * TODOs
-** PROJ General
+** PROJ General :computers:
 *** TODO [#C] Move all of the configs into literates (preferably into this file)
 my configs are managed via git anyways, so it's not a big deal
 *** TODO [#A] Consider moving to ZFS instead of BTRFS
@@ -42,11 +42,11 @@ I don't know if I wan't to keep anything else - I'll probably know after deletin
 *** TODO [#A] Set up disk encryption
 *** TODO [#B] Set up logging in with password + U2F key
 *** TODO [#C] Set up "panic password" which deletes all of =/home/=
-** PROJ WM
+** PROJ WM :computers:
 *** TODO Add qtile config into this directory to make it more manageable
 *** TODO set background with Nix
 Or consider setting this up in qtile config
-** DONE Shell
+** DONE Shell :computers:
 *** DONE configure ZSH via nix file
 **** KILL configure prezto
 There's no use to use prezto
@@ -55,10 +55,10 @@ There's no use to use prezto
 *** DONE configure gh
 *** DONE configure ssh
 *** DONE configure lsd
-** DONE Emacs
+** DONE Emacs :computers:
 *** DONE Set up Emacs overlay as flake
 *** KILL Fix Emacs' service
-** PROJ NixOS
+** PROJ NixOS :computers:
 *** DONE Set up automatic GC with ~2 weeks of generations
 *** DONE Set up backups properly
 *** DONE Set up agenix secrets
@@ -66,7 +66,7 @@ There's no use to use prezto
 *** DONE New folder structure
 *** DONE Use FUP
 *** DONE Modularize HM's stuff
-** PROJ self hosted
+** PROJ self hosted :selfhosted:
 *** Dart
 **** TODO set up minio server for laptop backups
 **** TODO set up tube archivist
