Don't set up TA
Something's wrong with opensearch/elasticsearch and I don't want to bear
with that at the moment - maybe in the future, but I won't do this for now

--- a/README.org
+++ b/README.org
@@ -67,7 +67,7 @@ There's no use to use prezto
 ** PROJ self hosted :selfhosted:
 *** Dart
 **** DONE set up restic server
-**** TODO set up [[https://github.com/bbilly1/tubearchivist/blob/master/docker-compose.yml][tube archivist]]
+**** KILL set up [[https://github.com/bbilly1/tubearchivist/blob/master/docker-compose.yml][tube archivist]]
 It might be a bit more difficult as it needs elasticsearch and redis
 **** TODO move nextcloud
 **** TODO set up jellyfin
