Too much hassle

--- a/README.org
+++ b/README.org
@@ -28,7 +28,7 @@ my configs are managed via git anyways, so it's not a big deal
 :CUSTOM_ID: moving-zfs
 :END:
 I've tested it on my server and it works great - to be done in the near future
-*** IDEA [#C] Consider [[https://grahamc.com/blog/erase-your-darlings?source=techstories.org][removing my darlings]]
+*** KILL IDEA [#C] Consider [[https://grahamc.com/blog/erase-your-darlings?source=techstories.org][removing my darlings]]
 This is probably a good idea with [[#moving-zfs][moving to ZFS]] as it won't take much additional time and I don't use much folders
 stuff to keep:
 - [ ] Projects folder
